--- a/en/index.html
+++ b/en/index.html
@@ -739,11 +739,10 @@
         <img src="../images/logo.png" alt="PotPlayer" class="nav-logo-img">
       </a>
       <div class="nav-menu">
-        <!-- <a href="#">首页</a> -->
-        <!-- <a href="#">功能介绍</a> -->
-        <!-- <a href="#">帮助中心</a> -->
+        <a href="/en/" style="display: none;">Home</a>
       </div>
       <div class="nav-actions">
+        <a href="/en/contact.html" class="btn btn-blue">Contact Us</a>
       </div>
     </div>
   </nav>
