--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
             <p class="tool-description">便携版PDF编辑和管理软件，无需安装即可使用</p>
           </div>
         </a>
-        <a href="https://AdobeAnimate.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://Animate.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-film"></i>
           </div>
@@ -911,7 +911,7 @@
             <p class="tool-description">实时角色动画软件，通过网络摄像头捕捉表情和动作</p>
           </div>
         </a>
-        <a href="https://AdobeCreativeCloudCleanerTool.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://CreativeCloudCleanerTool.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-broom"></i>
           </div>
@@ -1010,7 +1010,7 @@
             <p class="tool-description">专业的媒体编码软件，用于转换和导出各种视频格式</p>
           </div>
         </a>
-        <a href="https://AdobePhotoshop.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://Photoshop.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-image"></i>
           </div>
@@ -1100,7 +1100,7 @@
             <p class="tool-description">3D场景构建和渲染工具，用于创建产品可视化</p>
           </div>
         </a>
-        <a href="https://AdobeXD.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://XD.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-desktop"></i>
           </div>
@@ -1630,7 +1630,7 @@
             <p class="tool-description">SQL注入测试工具，用于检测和利用SQL注入漏洞</p>
           </div>
         </a>
-        <a href="https://VoxCPM.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://Vox.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-music"></i>
           </div>
