--- a/en/index.html
+++ b/en/index.html
@@ -813,7 +813,7 @@
           </div>
         </a>
         <!-- Popular Tool 5 -->
-        <a href="https://AdobePhotoshop.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://Photoshop.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-palette"></i>
           </div>
@@ -848,7 +848,7 @@
             <p class="tool-description">Professional PDF editing and management software with powerful document processing capabilities</p>
           </div>
         </a>
-        <a href="https://AdobeAcrobatProDCPortable.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://AcrobatProDCPortable.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-file-alt"></i>
           </div>
@@ -911,7 +911,7 @@
             <p class="tool-description">Real-time character animation software that captures expressions and movements via webcam</p>
           </div>
         </a>
-        <a href="https://AdobeCreativeCloudCleanerTool.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://CreativeCloudCleanerTool.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-broom"></i>
           </div>
@@ -1100,7 +1100,7 @@
             <p class="tool-description">3D scene building and rendering tool for creating product visualizations</p>
           </div>
         </a>
-        <a href="https://AdobeXD.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://XD.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-desktop"></i>
           </div>
@@ -1630,7 +1630,7 @@
             <p class="tool-description">SQL injection testing tool for detecting and exploiting SQL injection vulnerabilities</p>
           </div>
         </a>
-        <a href="https://VoxCPM.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://Vox.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-music"></i>
           </div>
