--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
           </div>
         </a>
         <!-- 热门工具 5 -->
-        <a href="https://AdobePhotoshop.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://Photoshop.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-palette"></i>
           </div>
@@ -839,7 +839,7 @@
     <section class="tools-collection" id="adobe">
       <h2 style="margin-bottom: 30px; font-size: 24px; font-weight: 600;">Adobe 产品系列</h2>
       <div class="tools-grid">
-        <a href="https://AdobeAcrobatProDC.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://AcrobatProDC.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-file-pdf"></i>
           </div>
