--- a/en/index.html
+++ b/en/index.html
@@ -839,7 +839,7 @@
     <section class="tools-collection" id="adobe">
       <h2 style="margin-bottom: 30px; font-size: 24px; font-weight: 600;">Adobe Products</h2>
       <div class="tools-grid">
-        <a href="https://AdobeAcrobatProDC.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://AcrobatProDC.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-file-pdf"></i>
           </div>
