--- a/en/index.html
+++ b/en/index.html
@@ -848,7 +848,7 @@
             <p class="tool-description">Professional PDF editing and management software with powerful document processing capabilities</p>
           </div>
         </a>
-        <a href="https://AcrobatProDCPortable.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://AdobeAcrobatProDCPortable.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-file-alt"></i>
           </div>
