--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
             <p class="tool-description">便携版PDF编辑和管理软件，无需安装即可使用</p>
           </div>
         </a>
-        <a href="https://Animate.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://AdobeAnimate.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-film"></i>
           </div>
