--- a/en/index.html
+++ b/en/index.html
@@ -1010,7 +1010,7 @@
             <p class="tool-description">Professional media encoding software for converting and exporting various video formats</p>
           </div>
         </a>
-        <a href="https://AdobePhotoshop.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://Photoshop.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-palette"></i>
           </div>
