--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon.png">
     <!-- 引入Font Awesome图标库 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta name="baidu-site-verification" content="codeva-yKZRKrdYRs" />
     <style>
     /* 基础样式重置 */
     * {
