--- a/en/index.html
+++ b/en/index.html
@@ -813,7 +813,7 @@
           </div>
         </a>
         <!-- Popular Tool 5 -->
-        <a href="https://Photoshop.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://adobe.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-palette"></i>
           </div>
@@ -848,7 +848,7 @@
             <p class="tool-description">Professional PDF editing and management software with powerful document processing capabilities</p>
           </div>
         </a>
-        <a href="https://AdobeAcrobatProDCPortable.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://adobe.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-file-alt"></i>
           </div>
@@ -902,7 +902,7 @@
             <p class="tool-description">Interactive e-learning content creation tool for creating training courses and presentations</p>
           </div>
         </a>
-        <a href="https://AdobeCharacterAnimator.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://adobe.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-user-astronaut"></i>
           </div>
@@ -911,7 +911,7 @@
             <p class="tool-description">Real-time character animation software that captures expressions and movements via webcam</p>
           </div>
         </a>
-        <a href="https://CreativeCloudCleanerTool.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://adobe.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-broom"></i>
           </div>
@@ -1100,7 +1100,7 @@
             <p class="tool-description">3D scene building and rendering tool for creating product visualizations</p>
           </div>
         </a>
-        <a href="https://XD.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://adobe.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-desktop"></i>
           </div>
