--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon.png">
     <!-- 引入Font Awesome图标库 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <meta name="baidu-site-verification" content="codeva-yKZRKrdYRs" />
     <style>
     /* 基础样式重置 */
     * {
@@ -814,7 +813,7 @@
           </div>
         </a>
         <!-- 热门工具 5 -->
-        <a href="https://Photoshop.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://adobe.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-palette"></i>
           </div>
@@ -849,7 +848,7 @@
             <p class="tool-description">专业的PDF编辑和管理软件，提供强大的文档处理功能</p>
           </div>
         </a>
-        <a href="https://AdobeAcrobatProDCPortable.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://adobe.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-file-alt"></i>
           </div>
@@ -903,7 +902,7 @@
             <p class="tool-description">交互式电子学习内容创作工具，用于创建培训课程和演示文稿</p>
           </div>
         </a>
-        <a href="https://AdobeCharacterAnimator.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://adobe.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-user-astronaut"></i>
           </div>
@@ -912,7 +911,7 @@
             <p class="tool-description">实时角色动画软件，通过网络摄像头捕捉表情和动作</p>
           </div>
         </a>
-        <a href="https://CreativeCloudCleanerTool.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://adobe.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-broom"></i>
           </div>
@@ -1101,7 +1100,7 @@
             <p class="tool-description">3D场景构建和渲染工具，用于创建产品可视化</p>
           </div>
         </a>
-        <a href="https://XD.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
+        <a href="https://adobe.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-desktop"></i>
           </div>
