--- a/en/index.html
+++ b/en/index.html
@@ -729,7 +729,8 @@
     }
   </style>
   <!-- 在现有script标签前添加 -->
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5020583079217470"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- 导航栏 -->
