--- a/index.html
+++ b/index.html
@@ -908,163 +908,11 @@
             <i class="fas fa-user-astronaut"></i>
           </div>
           <div class="tool-info">
-            <h3 class="tool-title">Adobe Character Animator</h3>
-            <p class="tool-description">实时角色动画软件，通过网络摄像头捕捉表情和动作</p>
+            <h3 class="tool-title">Adobe 全家桶 </h3>
+            <p class="tool-description">Adobe 全家桶（Adobe Creative Cloud，简称 Adobe CC） 是 Adobe 公司推出的全球领先的创意设计软件套装，是全球设计师、摄影师、视频创作者、动画师等创意工作者的行业标准工具集。它整合了 20 + 款专业应用与云服务，覆盖平面设计、摄影、影视后期、音频制作、3D/AR、UI/UX、网页、PDF等全创作领域，软件间深度互通，支持云端协作与 AI 赋能，大幅提升创作效率。</p>
           </div>
         </a>
-        <a href="https://adobe.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-broom"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Creative Cloud Cleaner Tool</h3>
-            <p class="tool-description">清理Adobe Creative Cloud相关文件和注册表项的工具</p>
-          </div>
-        </a>
-        <a href="https://AdobeDimension.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-cube"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Dimension</h3>
-            <p class="tool-description">3D设计和渲染软件，用于创建产品可视化和品牌素材</p>
-          </div>
-        </a>
-        <a href="https://AdobeDNGConverter.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-exchange-alt"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe DNG Converter</h3>
-            <p class="tool-description">将相机原始格式转换为DNG格式的工具</p>
-          </div>
-        </a>
-        <a href="https://AdobeDreamweaver.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-code"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Dreamweaver</h3>
-            <p class="tool-description">专业的网页设计和开发工具，提供可视化编辑和代码编辑功能</p>
-          </div>
-        </a>
-        <a href="https://AdobeFresco.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-paint-brush"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Fresco</h3>
-            <p class="tool-description">数字绘画和绘图应用，结合了传统绘画和现代数字工具</p>
-          </div>
-        </a>
-        <a href="https://AdobeIllustrator.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-drafting-compass"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Illustrator</h3>
-            <p class="tool-description">专业的矢量图形编辑软件，用于创建标志、图标和插图</p>
-          </div>
-        </a>
-        <a href="https://AdobeInCopy.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-file-alt"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe InCopy</h3>
-            <p class="tool-description">专业的文案编辑软件，与InDesign无缝协作</p>
-          </div>
-        </a>
-        <a href="https://AdobeInDesign.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-newspaper"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe InDesign</h3>
-            <p class="tool-description">专业的版面设计和排版软件，用于创建印刷品和数字出版物</p>
-          </div>
-        </a>
-        <a href="https://AdobeLightroom.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-camera-retro"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Lightroom</h3>
-            <p class="tool-description">专业的照片编辑和管理软件，提供强大的图像处理功能</p>
-          </div>
-        </a>
-        <a href="https://AdobeLightroomClassic.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-images"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Lightroom Classic</h3>
-            <p class="tool-description">桌面版照片编辑和管理软件，提供全面的图像处理工具</p>
-          </div>
-        </a>
-        <a href="https://AdobeMediaEncoder.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-video"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Media Encoder</h3>
-            <p class="tool-description">专业的媒体编码软件，用于转换和导出各种视频格式</p>
-          </div>
-        </a>
-        <a href="https://Photoshop.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-image"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Photoshop</h3>
-            <p class="tool-description">专业的图像处理软件，提供强大的编辑工具和创意功能</p>
-          </div>
-        </a>
-        <a href="https://AdobePhotoshopElements.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-paint-roller"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Photoshop Elements</h3>
-            <p class="tool-description">面向家庭用户的照片编辑软件，提供简化的编辑工具</p>
-          </div>
-        </a>
-        <a href="https://AdobePremiereElements.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-film"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Premiere Elements</h3>
-            <p class="tool-description">面向家庭用户的视频编辑软件，提供简化的编辑工具</p>
-          </div>
-        </a>
-        <a href="https://AdobePremiere.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-cut"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Premiere Pro</h3>
-            <p class="tool-description">专业的视频编辑软件，用于电影、电视和网络内容创作</p>
-          </div>
-        </a>
-        <a href="https://AdobePremiereRush.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-bolt"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Premiere Rush</h3>
-            <p class="tool-description">跨平台视频编辑应用，适合快速创建和分享视频内容</p>
-          </div>
-        </a>
-        <a href="https://AdobeSubstance3DDesigner.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-cogs"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Substance 3D Designer</h3>
-            <p class="tool-description">3D材质创建工具，用于游戏、电影和AR/VR内容</p>
-          </div>
-        </a>
+        
         <a href="https://AdobeSubstance3DModeler.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-cube"></i>
@@ -1072,42 +920,6 @@
           <div class="tool-info">
             <h3 class="tool-title">Adobe Substance 3D Modeler</h3>
             <p class="tool-description">3D建模工具，提供直观的建模体验</p>
-          </div>
-        </a>
-        <a href="https://AdobeSubstance3DPainter.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-paint-brush"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Substance 3D Painter</h3>
-            <p class="tool-description">3D纹理绘制工具，用于为3D模型添加详细的纹理</p>
-          </div>
-        </a>
-        <a href="https://AdobeSubstance3DSampler.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-clone"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Substance 3D Sampler</h3>
-            <p class="tool-description">3D材质采样工具，从照片创建高质量材质</p>
-          </div>
-        </a>
-        <a href="https://AdobeSubstance3DStager.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-theater-masks"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Substance 3D Stager</h3>
-            <p class="tool-description">3D场景构建和渲染工具，用于创建产品可视化</p>
-          </div>
-        </a>
-        <a href="https://adobe.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-desktop"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe XD</h3>
-            <p class="tool-description">用户体验设计和原型制作工具，用于创建网站和移动应用界面</p>
           </div>
         </a>
       </div>
