--- a/en/index.html
+++ b/en/index.html
@@ -908,163 +908,11 @@
             <i class="fas fa-user-astronaut"></i>
           </div>
           <div class="tool-info">
-            <h3 class="tool-title">Adobe Character Animator</h3>
-            <p class="tool-description">Real-time character animation software that captures expressions and movements via webcam</p>
+            <h3 class="tool-title">Adobe Creative Cloud</h3>
+            <p class="tool-description">Adobe Creative Cloud (Adobe CC) is Adobe's leading global creative design software suite, serving as the industry-standard toolset for designers, photographers, video creators, animators, and other creative professionals worldwide. It integrates over 20 professional applications and cloud services, covering all creative fields including graphic design, photography, film post-production, audio production, 3D/AR, UI/UX, web design, and PDF editing. The software offers deep interoperability, supports cloud collaboration and AI-powered features, significantly improving creative efficiency.</p>
           </div>
         </a>
-        <a href="https://adobe.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-broom"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Creative Cloud Cleaner Tool</h3>
-            <p class="tool-description">Tool to clean Adobe Creative Cloud related files and registry entries</p>
-          </div>
-        </a>
-        <a href="https://AdobeDimension.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-cube"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Dimension</h3>
-            <p class="tool-description">3D design and rendering software for creating product visualizations and brand materials</p>
-          </div>
-        </a>
-        <a href="https://AdobeDNGConverter.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-exchange-alt"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe DNG Converter</h3>
-            <p class="tool-description">Tool to convert camera raw formats to DNG format</p>
-          </div>
-        </a>
-        <a href="https://AdobeDreamweaver.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-code"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Dreamweaver</h3>
-            <p class="tool-description">Professional web design and development tool with visual editing and code editing capabilities</p>
-          </div>
-        </a>
-        <a href="https://AdobeFresco.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-paint-brush"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Fresco</h3>
-            <p class="tool-description">Digital painting and drawing application combining traditional painting and modern digital tools</p>
-          </div>
-        </a>
-        <a href="https://AdobeIllustrator.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-drafting-compass"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Illustrator</h3>
-            <p class="tool-description">Professional vector graphics editing software for creating logos, icons and illustrations</p>
-          </div>
-        </a>
-        <a href="https://AdobeInCopy.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-file-alt"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe InCopy</h3>
-            <p class="tool-description">Professional copy editing software that seamlessly collaborates with InDesign</p>
-          </div>
-        </a>
-        <a href="https://AdobeInDesign.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-newspaper"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe InDesign</h3>
-            <p class="tool-description">Professional layout design and typesetting software for creating print and digital publications</p>
-          </div>
-        </a>
-        <a href="https://AdobeLightroom.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-camera-retro"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Lightroom</h3>
-            <p class="tool-description">Professional photo editing and management software with powerful image processing capabilities</p>
-          </div>
-        </a>
-        <a href="https://AdobeLightroomClassic.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-images"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Lightroom Classic</h3>
-            <p class="tool-description">Desktop photo editing and management software with comprehensive image processing tools</p>
-          </div>
-        </a>
-        <a href="https://AdobeMediaEncoder.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-video"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Media Encoder</h3>
-            <p class="tool-description">Professional media encoding software for converting and exporting various video formats</p>
-          </div>
-        </a>
-        <a href="https://Photoshop.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-palette"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Photoshop</h3>
-            <p class="tool-description">Professional image editing software with powerful editing tools and creative features</p>
-          </div>
-        </a>
-        <a href="https://AdobePhotoshopElements.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-paint-roller"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Photoshop Elements</h3>
-            <p class="tool-description">Photo editing software for home users with simplified editing tools</p>
-          </div>
-        </a>
-        <a href="https://AdobePremiereElements.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-film"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Premiere Elements</h3>
-            <p class="tool-description">Video editing software for home users with simplified editing tools</p>
-          </div>
-        </a>
-        <a href="https://AdobePremiere.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-cut"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Premiere Pro</h3>
-            <p class="tool-description">Professional video editing software for film, television and web content creation</p>
-          </div>
-        </a>
-        <a href="https://AdobePremiereRush.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-bolt"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Premiere Rush</h3>
-            <p class="tool-description">Cross-platform video editing application suitable for quick creation and sharing of video content</p>
-          </div>
-        </a>
-        <a href="https://AdobeSubstance3DDesigner.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-cogs"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Substance 3D Designer</h3>
-            <p class="tool-description">3D material creation tool for games, films and AR/VR content</p>
-          </div>
-        </a>
+        
         <a href="https://AdobeSubstance3DModeler.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
           <div class="tool-icon">
             <i class="fas fa-cube"></i>
@@ -1074,42 +922,7 @@
             <p class="tool-description">3D modeling tool providing intuitive modeling experience</p>
           </div>
         </a>
-        <a href="https://AdobeSubstance3DPainter.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-paint-brush"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Substance 3D Painter</h3>
-            <p class="tool-description">3D texture painting tool for adding detailed textures to 3D models</p>
-          </div>
-        </a>
-        <a href="https://AdobeSubstance3DSampler.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-clone"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Substance 3D Sampler</h3>
-            <p class="tool-description">3D material sampling tool for creating high-quality materials from photos</p>
-          </div>
-        </a>
-        <a href="https://AdobeSubstance3DStager.calipertools.com" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-theater-masks"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe Substance 3D Stager</h3>
-            <p class="tool-description">3D scene building and rendering tool for creating product visualizations</p>
-          </div>
-        </a>
-        <a href="https://adobe.calipertools.com/" class="tool-card" target="_blank" rel="noopener noreferrer">
-          <div class="tool-icon">
-            <i class="fas fa-desktop"></i>
-          </div>
-          <div class="tool-info">
-            <h3 class="tool-title">Adobe XD</h3>
-            <p class="tool-description">User experience design and prototyping tool for creating website and mobile app interfaces</p>
-          </div>
-        </a>
+        
       </div>
     </section>
 
